Criação da view, para buscar endereço por CEP

--- a/src/app/delivery-home/header/header.component.html
+++ b/src/app/delivery-home/header/header.component.html
@@ -4,6 +4,6 @@
         <img class="logo" src="../../../assets/imgs/logo.jpg" alt="logo">
     </div>
     <div>
-        <a class="btn" href="#">Entrar ou Cadastrar</a>
+        <a class="nav-btn" href="#">Entrar ou Cadastrar</a>
     </div>
 </header>
