--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-
 <div class="site-container">
     <app-header></app-header>
-    <app-main-delivery></app-main-delivery>
+    <div class="main wrap">
+        <router-outlet></router-outlet>
+    </div>
     <app-footer></app-footer>
 </div>
