--- a/src/app/delivery-home/zip-code-form/zip-code-form.component.html
+++ b/src/app/delivery-home/zip-code-form/zip-code-form.component.html
@@ -1,11 +1,9 @@
-<div class="form-box">
+<form class="form-box">
   <span class="h1">Faça seu pedido</span>
-  <input type="text"  class="input" placeholder="Digite seu CEP">
-  <button class="btn btn-red">Buscar</button>
+  <input type="text"  class="input" [(ngModel)]="zipCode" name="zipCode" placeholder="Digite seu CEP">
+  <button (click)="getAddress()" class="btn btn-red">Buscar</button>
   <span class="h2">Não sabe seu <b>CEP</b>? <a class="link" href="#">Clique aqui</a></span>
   <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
     of type and scrambled it to make a type specimen book.</span>
-</div>
-
-<!-- CRIAR CLASSES CSS -->
+</form>
