--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ body {
     box-shadow: 5px 5px 5px 5px rgba(10, 10, 10, 0.15);
     margin-top: 140px;
     position: relative;
+    margin-bottom: 100px;
 }
 
 .header .nav-btn {
@@ -61,20 +62,40 @@ body {
     height: 600px;
 }
 
-.wrap {
-    flex-wrap: wrap;
-}
-
 .form-box {
     font-family: sans-serif;
     background: rgba(0,0,0,0.71) none;
     border-radius: 5px;
-    height: 300px;
+    height: 400px;
     margin: 80px;
+    width: 1000px;
     padding: 20px 40px; 
     display: flex;
     flex-direction: column;
     align-items: left;
+    
+}
+
+.between {
+    flex-flow: row wrap;
+}
+
+.between .left .btn-red {
+    width: 69.33%;
+    margin-left: 0.5%;
+}
+
+.between .left .btn-mustard {
+    width: 30%;
+    margin-right: 0.5%;
+}
+
+.left { 
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .form-box .h1 {
@@ -94,9 +115,12 @@ body {
     height: 40px;
     border-radius: 8px;
     background-color: #ffffff;
-    margin: 0;
     outline: 0;
     padding: 5px;
+}
+
+.input:disabled {
+    background: #cccccc52;
 }
 
 .form-box .btn {
@@ -104,6 +128,7 @@ body {
     border-radius: 8px;
     align-self: center;
     margin: 10px 0px;
+    
 }
 
 .form-box .h2 .link {
@@ -166,7 +191,7 @@ body {
     cursor: pointer;
     outline: 0;
     border: none;
-  }
+}
 
 .btn-red {
     background-color: #d7271a;
