--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,12 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100%;
+html {
+    font-family: sans-serif;
 }
 
 .site-container {
+    position: relative;
     display: grid;
     grid-template-areas: 
         'header'
@@ -63,16 +64,18 @@ body {
 }
 
 .form-box {
-    font-family: sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background: rgba(0,0,0,0.71) none;
-    border-radius: 5px;
-    height: 400px;
-    margin: 80px;
-    width: 1000px;
+    border-radius: 11px;
     padding: 20px 40px; 
     display: flex;
     flex-direction: column;
     align-items: left;
+    height: 50%;
+    width: 50%;
     
 }
 
@@ -164,7 +167,8 @@ body {
     }
     
     .form-box {
-        margin: 10%;
+        width: 95%; 
+        height: 50%;
     }
 
 }
