Refactoring CSS & Menu cardápio

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,11 @@
-<footer class="footer">
+<footer>
+    <div class="footer-social">
+        <i id="fb" class="fab fa-facebook-square"></i>
+        <i id="insta" class="fab fa-instagram"></i>
+        <i id="whats" class="fab fa-whatsapp"></i>
+    </div>
+    <div class="footer-info">
+        <span>Matheus Cruz</span>
+        <span>Fullstack developer</span>
+    </div>
 </footer>
