--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="site-container">
     <app-header></app-header>
-    <div class="main wrap">
-        <router-outlet></router-outlet>
+    <div class="main">
+        <router-outlet>
+        </router-outlet>
     </div>
     <app-footer></app-footer>
 </div>
