--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
-<header class="header">
-        <i class="fa fa-bars"><a href="#"></a></i>
-    <div>
-        <img class="logo" src="../../../assets/imgs/logo.jpg" alt="logo">
-    </div>
-    <div>
-        <a class="nav-btn" href="#">Entrar ou Cadastrar</a>
-    </div>
-</header>
+<div>
+    <i class="fa fa-bars"><a href="#"></a></i>
+</div>
+<div class="header-center">
+    <img src="../../../assets/imgs/logo.jpg" alt="logo">
+</div>
+<div class="header-right">
+    <a class="nav-btn" href="#">Entrar ou Cadastrar</a>
+</div>
