Ajuste de layout /carte

--- a/src/app/menu/category/category.component.html
+++ b/src/app/menu/category/category.component.html
@@ -9,7 +9,7 @@
     <li>
       <div *ngFor="let product of category.products">
         <div *ngIf="visibility">
-          <app-product [productName]="product.name" [description]="product.description" [oldPrice]="product.oldPrice"
+          <app-product [productName]="product.name" [img]="product.img" [description]="product.description" [oldPrice]="product.oldPrice"
             [currentPrice]="product.currentPrice"></app-product>
         </div>
       </div>
