--- a/src/app/menu/product/product.component.html
+++ b/src/app/menu/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="product">
-  <img class="img-product" src="" alt="">
+  <img class="img-product" src="../../../assets/imgs/hamburguers/hamb2.jpg" alt="">
   <div class="texts">
     <h2>{{ productName }}</h2>
     <p>{{ description }}</p>
