--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <i class="fa fa-bars"><a href="#"></a></i>
 </div>
 <div class="header-center">
-    <img src="../../../assets/imgs/logo.jpg" alt="logo">
+    <img src="../../../assets/imgs/logo.png" alt="logo">
 </div>
 <div class="header-right">
     <a class="nav-btn" href="#">Entrar ou Cadastrar</a>
