--- a/src/app/menu/carte/carte.component.html
+++ b/src/app/menu/carte/carte.component.html
@@ -12,4 +12,12 @@
   </ul>
 </div>
 <div class="shopping-cart">
+  <div class="card-header">
+    <div class="title">
+      <span style="font-size: 200%;" >
+        <i class="fas fa-shopping-cart"></i>
+      </span>
+      O carrinho está vazio :(
+    </div>
+  </div>
 </div>
