--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow-y: scroll;
 }
 
 
@@ -59,9 +60,12 @@ app-header .header-center {
 
 app-header .header-center > img {
     border-radius: 5px;
-    width: 80px;
-    height: 80px;
+    margin-top: 10px;
+    width: 160px;
+    height: 130px;
+    overflow: visible;
     box-shadow: 2px 2px 2px 2px rgba(5, 5, 5, 0.15);
+    background-color: #f3b600;
     cursor: pointer;
 }
 
@@ -314,15 +318,15 @@ app-footer .footer-info:hover {
 }
     
 .btn-white-out:hover {
-    background-color: #ffffff;
+    background-color: #dedaff;
     color: #333333;
 }
 
 app-carte {
     height: 100%;
     display: grid;
-    background-color: #5a5a5ac2;
-    min-width: 1000px;
+    background-color: #ffffff;
+    min-width: 1100px;
     border-radius: 5px;
     display: grid;
     grid-template-rows: 100px 1fr;
@@ -344,11 +348,11 @@ app-carte {
     font-weight: 200;
     font-size: 24px;
     margin: 12px 0px;
-    color: #ffffff;
+    color: #000000;
 }
 
 .carte-header .extra-info > a{
-    color: #ffffff;
+    color: #000000;
     padding: 8px 0px;
 }
 
@@ -359,12 +363,35 @@ app-carte {
 }
 
 .shopping-cart {
+    display: grid;
+    grid-template-rows: 50px auto;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+        'card-header';
     grid-area: shopping-cart;
-    background-color: #333333;
+    background-color: #ffffff;
     border-radius: 5px;
     max-height: 200px;
     margin: 10px;
 }
+
+.card-header {
+    grid-area: card-header;
+    background-color: #d7271a;
+    padding: 5px;
+    align-content: center;
+
+}
+
+.card-header .title {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+    justify-content: space-around;
+    align-content: center;
+    margin-left: 20px;
+}
+
 
 .menu-item {
     display: flex;
@@ -388,7 +415,7 @@ li {
     font-size: 10px;
     font-weight: 100;
     
-    background: #ffffff;
+    background: #0253aa0c;
     color: #000000;
 
     justify-content: space-between;
@@ -420,12 +447,11 @@ li {
 
 .product .img-product {
     grid-area: img-product;
-    margin: 3px;
     border-radius: 5px;
     background-color: #000000;
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+    border: 1px solid #ffffff;
 }
 
 .product .texts {
